--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,10 @@
 {
   "name": "kids-learning-games",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
+  "private": true,  "scripts": {
+    "dev": "concurrently --names \"BACKEND,FRONTEND\" --prefix-colors \"bgBlue.bold,bgMagenta.bold\" \"npm run backend\" \"next dev\"",
+    "dev:frontend-only": "next dev",
+    "backend": "cd ../backend && npm run dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -63,6 +64,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
